plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.17.2'
}

version '1.0'

sourceCompatibility = 11

group 'sim'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'com.jfoenix:jfoenix:9.0.10'
}

javafx{
    version = '14'
    modules = ['javafx.controls', 'javafx.fxml']
}

run {
    jvmArgs = [
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
            "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
            "--add-opens=java.base/java.lang.reflect=com.jfoenix",
    ]
}

mainClassName = 'warriorSim.Classic/sim.Main'

jlink{
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'WarriorSim Classic'

        jvmArgs = [
                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
                "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
                "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
                "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
                "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
                "--add-opens=java.base/java.lang.reflect=com.jfoenix",

        ]
    }
    jpackage {
        // Set the environment property BADASS_JLINK_JPACKAGE_HOME or explicitly configure the below property
        jpackageHome = 'C:/Program Files/AdoptOpenJDK/jdk-14.0.0.36-hotspot'
        installerOptions = ['--win-per-user-install', '--win-dir-chooser']
        imageOptions = ['--icon', 'src/main/resources/images/app/warrior_wow_icon.ico']
    }
}

